2006-09-25  Till Kamppeter <till.kamppeter@gmx.net>

	* Makefile.in: Added forgotten DESTDIR (upstream merge from Debian 
	  patch).

	* foomatic-combo-xml.c: Several small stability fixes in the C code
	  (upstream merge from Debian patch).

	* foomatic-configure.in: If there is a user named "cupsys", switch
	  the ownership of the PPD files to "cupsys", this way Ubuntu does
	  not break on running CUPS as non-root. This does not affect
	  other distributions (upstream merge from Debian patch).

	* foomatic-printjob.in: Added help for the printer-specific
	  options (upstream merge from Debian patch).

	* foomatic-getpjloptions.8.in: Typo fix (upstream merge from
	  Debian patch).

	* foomatic-printjob.1.in: Text fixes, new help on printer options
	  mentioned (upstream merge from Debian patch).

2006-09-22  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-combo-xml.c, foomatic-ppdfile.in, lib/Foomatic/DB.pm:
	  Let the listing of auto-generatable PPD files for CUPS 1.2
	  ("foomatic-ppdfile list") not contain entries for combos of
	  printers with driver entries which do not have a command line
	  prototype (these indicate only that the printer/driver combo
	  works, but do not produce PPD files). Allow defining valid
	  printer/driver combos also by only defining the driver in the
	  "<drivers>" section of the printer entry. So for a printer with
	  ready-made PPD it is enough to add a driver entry with link to
	  the PPD in its "<drivers>" section so that "foomatic-ppdfile"
	  lists and returns the PPD.

2006-07-20  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: For get_javascript2() building the printer
	  menu based on pre-read data now also printer IDs can be supplied
	  instead of deriving the IDs from the model names.

2006-07-16  Till Kamppeter <till.kamppeter@gmx.net>

	* Makefile.in: Fixed missing dependency at "man:" target in
	  the Makefile (Gentoo bug #138635)

2006-07-11  Till Kamppeter <till.kamppeter@gmx.net>
